--- a/templates/ajax/admin/groups/edit.html.twig
+++ b/templates/ajax/admin/groups/edit.html.twig
@@ -13,7 +13,7 @@
                     <div class="cell padded rw-4">
                         <select id="group-lang">
                             {% for lang in ['de','fr','en','es','multi'] %}
-                                <option value="{{ lang }}"{% if current_group.lang == lang %} selected{% endif %}>{{ lang }}</option>
+                                <option value="{{ lang }}"{% if current_group is not null and current_group.lang == lang %} selected{% endif %}>{{ lang }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -24,7 +24,7 @@
                     <div class="cell padded rw-4">
                         <select id="group-semantic">
                             {% for label, value in types %}
-                                <option value="{{ value }}"{% if current_group.semantic == value %} selected{% endif %}>{{ label }}</option>
+                                <option value="{{ value }}"{% if current_group is not null and current_group.semantic == value %} selected{% endif %}>{{ label }}</option>
                             {% endfor %}
                         </select>
                     </div>
