--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -23,6 +23,11 @@ div.town-banner {
     &.night { background: url("../../img/background/town/night_houses.jpg") center/cover no-repeat; }
   }
 
+  &.town-banner-visit-dead {
+    background: url("../../img/background/town/visit_dead.jpg") center/cover no-repeat;
+    &.night { background: url("../../img/background/town/night_visit_dead.jpg") center/cover no-repeat; }
+  }
+
   &.town-banner-visit {
     background: url("../../img/background/town/visit.jpg") center/cover no-repeat;
     &.night { background: url("../../img/background/town/night_visit.jpg") center/cover no-repeat; }
