--- a/templates/ajax/public/apidocs.html.twig
+++ b/templates/ajax/public/apidocs.html.twig
@@ -9,6 +9,8 @@
                 <tbody>
                     <tr><td>{{ url('ext_json', {type: 'status'}) }}</td><td><a>Status</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'items'})  }}</td><td><a>Array&lt;Item&gt;</a></td></tr>
+                    <tr><td>{{ url('ext_json', {type: 'buildings'})  }}</td><td><a>Array&lt;Building&gt;</a></td></tr>
+                    <tr><td>{{ url('ext_json', {type: 'pictos'})  }}</td><td><a>Array&lt;Picto&gt;</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'me'})     }}</td><td><a>User</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'user'})   }}?id=$user_id</td><td><a>User</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'map'})    }}?mapId=$map_id</td><td><a>Map</a></td></tr>
@@ -233,6 +235,31 @@
 <a class="entity">&lt;ExpeditionPoints&gt;</a> {
    x: <span class="int">Int</span>,
    y: <span class="int">Int</span>
+}
+
+<a class="entity" id="building">&lt;Building&gt;</a> {
+   id: <span class="int">Int</span>,                        // {{ 'ID der Site'|trans({},'docs') }}
+   img: <span class="string">String</span>,
+   name: <a class="custom">&lt;LangString&gt;</a>,
+   desc: <a class="custom">&lt;LangString&gt;</a>,
+   pa: <span class="int">Int</span>,                        // {{ 'Anzahl der für den Bau benötigten AP'|trans({},'docs') }}
+   maxLife: <span class="int">Int</span>,
+   breakable: <span class="bool">Bool</span>,                // {{ 'ob dieses Gebäude nach dem Angriff zerstört werden kann'|trans({},'docs') }}
+   def: <span class="int">Int</span>,                       // {{ 'Verteidigung dieses Gebäudes'|trans({},'docs') }}
+   hasUpgrade: <span class="bool">Bool</span>,               // {{ 'Wenn sich dieses Gebäude weiterentwickeln kann'|trans({},'docs') }}
+   rarity:  <span class="string">String</span>,                // {{ 'Seltenheit des Plans'|trans({},'docs') }}
+   temporary: <span class="bool">Bool</span>,                // {{ 'Temporäres Gebäude'|trans({},'docs') }}
+   parent: <span class="int">Int</span>,                    // {{ 'Gebäude-ID des vorherigen Zweigs'|trans({},'docs') }}
+   resources: array<a class="custom">&lt;Resources&gt;</a>
+}
+
+<a class="entity" id="building">&lt;Picto&gt;</a> {
+   id: <span class="int">Int</span>,                        // {{ 'ID der Picto'|trans({},'docs') }}
+   img: <span class="string">String</span>,
+   name: <a class="custom">&lt;LangString&gt;</a>,
+   desc: <a class="custom">&lt;LangString&gt;</a>,
+   rare:  <span class="string">String</span>,                  // {{ 'Wenn dieses Picto selten ist'|trans({},'docs') }}
+   community:  <span class="string">String</span>,             // {{ 'Wenn dieses Picto eine Gemeinschaftsauszeichnung ist'|trans({},'docs') }}
 }
 
 <a class="entity">&lt;LangString&gt;</a> {
