--- a/templates/ajax/public/apidocs.html.twig
+++ b/templates/ajax/public/apidocs.html.twig
@@ -11,6 +11,7 @@
                     <tr><td>{{ url('ext_json', {type: 'items'})  }}</td><td><a>Array&lt;Item&gt;</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'buildings'})  }}</td><td><a>Array&lt;Building&gt;</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'pictos'})  }}</td><td><a>Array&lt;Picto&gt;</a></td></tr>
+                    <tr><td>{{ url('ext_json', {type: 'ruins'})  }}</td><td><a>Array&lt;RuinDetail&gt;</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'me'})     }}</td><td><a>User</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'user'})   }}?id=$user_id</td><td><a>User</a></td></tr>
                     <tr><td>{{ url('ext_json', {type: 'map'})    }}?mapId=$map_id</td><td><a>Map</a></td></tr>
@@ -50,10 +51,10 @@
    danger: <span class="int">Int</span>,                    // {{ 'Gefahrenstufe 0 = grün, 1 = grün-gelb, 2 = orange, 3 = rot, 4 = blau'|trans({},'docs') }}
    details: <a class="custom">&lt;ZoneInfo&gt;</a>,            // {{ 'Bereichsdetails'|trans({},'docs') }}
    items: Array<a class="custom">&lt;Item&gt;</a>,             // {{ 'Liste der Objekte in diesem Bereich'|trans({},'docs') }}
-   building: <a class="custom">&lt;RuineInfo&gt;</a>           // {{ 'Informationen zum Gebäude in der Umgebung'|trans({},'docs') }}
+   building: <a class="custom">&lt;RuinInfo&gt;</a>           // {{ 'Informationen zum Gebäude in der Umgebung'|trans({},'docs') }}
 }
 
-<a class="entity">&lt;RuineInfo&gt;</a> {
+<a class="entity">&lt;RuinInfo&gt;</a> {
    type: <span class="int">Int</span>,                      // {{ 'Die Gebäude-ID'|trans({},'docs') }}
    dig: <span class="int">Int</span>,                       // {{ 'Die Anzahl der Sandhaufen auf dem Gebäude'|trans({},'docs') }}
    name: <a class="custom">&lt;LangString&gt;</a>,             // {{ 'Der Name des Gebäudes'|trans({},'docs') }}
@@ -260,6 +261,14 @@
    desc: <a class="custom">&lt;LangString&gt;</a>,
    rare:  <span class="string">String</span>,                  // {{ 'Wenn dieses Picto selten ist'|trans({},'docs') }}
    community:  <span class="string">String</span>,             // {{ 'Wenn dieses Picto eine Gemeinschaftsauszeichnung ist'|trans({},'docs') }}
+}
+
+<a class="entity" id="building">&lt;RuinDetail&gt;</a> {
+   id: <span class="int">Int</span>,                        // {{ 'ID der Ruine'|trans({},'docs') }}
+   img: <span class="string">String</span>,
+   name: <a class="custom">&lt;LangString&gt;</a>,
+   desc: <a class="custom">&lt;LangString&gt;</a>,
+   explorable:  <span class="string">String</span>,            // {{ 'Erforschbare Ruine'|trans({},'docs') }}
 }
 
 <a class="entity">&lt;LangString&gt;</a> {
