--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1479,6 +1479,9 @@ div.item-tag {
   &.item-tag-essential:after { background: url("../img/item/cat_job.gif") center/contain no-repeat }
   &.item-tag-weapon:after { background: url("../img/item/cat_weapon.gif") center/contain no-repeat }
   &.item-tag-heavy:after { background: url("../img/item/cat_heavy.gif") center/contain no-repeat }
+  em {
+    color: white;
+  }
 }
 
 div.badge {
