--- a/templates/ajax/game/town/nightwatch.html.twig
+++ b/templates/ajax/game/town/nightwatch.html.twig
@@ -42,8 +42,9 @@
     </div>
     {% for watcher in watchers %}
         <div class="row small {% if watcher.citizen == me %} me{% endif %}">
-            <div class="cell padded rw-3 center">
+            <div class="cell padded rw-3 center ellipsis">
                 <a href="#" x-ajax-href="{{ path('town_visit', {id: watcher.citizen.id}) }}">{{watcher.citizen.name}}</a>
+                <div class="tooltip normal">{{ watcher.citizen.name }}</div>
             </div>
             <div class="cell padded rw-2 center">{{watcher.def}} <img src="{{ asset('build/images/icons/small_zombie.gif') }}" /></div>
             <div class="cell padded rw-6">
