--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -147,9 +147,10 @@
 
   span.rpauthor {
     background: url('../../img/forum/rp.png') left top no-repeat;
-    height: 27px; padding-left: 24px; display: block;
+    padding-left: 24px; display: block;
     font-style: italic; font-size: 1.25rem;
     font-weight: bold; clear: left;
+    &+.rpText { margin-top: 7px; }
   }
 
   .rpText {
