--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -102,3 +102,7 @@ button.button-dropdown-button, div.button.button-dropdown-button, div.forum-butt
 }
 
 .clear {clear: both;}
+
+.no-margin {
+	margin: 0;
+}
