--- a/templates/scripts/errors/inventory.txt.twig
+++ b/templates/scripts/errors/inventory.txt.twig
@@ -12,3 +12,4 @@
 {{ constant('App\\Service\\InventoryHandler::ErrorEssentialItemBlocked') }}    : '{{'Das kannst du mit einem Berufsgegenstand nicht tun.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Service\\InventoryHandler::ErrorTooManySouls') }}    : '{{'Du kannst nicht mehr als eine Seele tragen.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Service\\InventoryHandler::ErrorBankTheftFailed') }}    : '{{'Dein Diebstahlversuch ist gescheitert! Du bist entdeckt worden!'|trans({},'game')|e('js')}}',
+{{ constant('App\\Service\\InventoryHandler::ErrorTargetChestFull') }}    : '{{'Der Empfänger scheint <strong>keinen freien Platz mehr in seiner Truhe</strong> zu haben! Er kann darum den oder die mitgesendeten Gegenstände nicht empfangen. Sende ihm weniger Gegenstände oder bitte ihn etwas Platz in seiner Truhe zu machen.<hr/>Deine Nachricht <strong>wurde nicht gesendet</strong>.'|trans({},'game')|e('js')}}',
