--- a/templates/ajax/soul/distinctions.html.twig
+++ b/templates/ajax/soul/distinctions.html.twig
@@ -12,13 +12,11 @@
             </div>
         {% endif %}
     <div class="distinctions-list center">
-        {% if user.awards|length != 0 %}
-            {% if plain is not defined or not plain %}
-                <ul class="tabs plain" x-tab-group="awards" x-tab-control x-tab-default="dinstinctions">
-                    <li class="tab-soul-distinctions" x-tab-id="dinstinctions"><div class="tab-link">{{ 'Statistiken'|trans({}, 'soul') }}</div></li>
-                    <li class="tab-soul-distinctions" x-tab-id="titles"><div class="tab-link">{{ 'Errungenschaften'|trans({}, 'soul') }} ({{user.awards|length}})</div></li>
-                </ul>
-            {% endif %}
+        {% if plain is not defined or not plain and user.awards|length != 0%}
+            <ul class="tabs plain" x-tab-group="awards" x-tab-control x-tab-default="dinstinctions">
+                <li class="tab-soul-distinctions" x-tab-id="dinstinctions"><div class="tab-link">{{ 'Statistiken'|trans({}, 'soul') }}</div></li>
+                <li class="tab-soul-distinctions" x-tab-id="titles"><div class="tab-link">{{ 'Errungenschaften'|trans({}, 'soul') }} ({{user.awards|length}})</div></li>
+            </ul>
         {% endif %}
         <div x-tab-group="awards" x-tab-id="dinstinctions" x-tab-target>
         {% if pictos|length == 0 %}
