--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -95,7 +95,8 @@ div.tooltip.badge-tooltip {
 
             .picto { display: inline-block; width: 32px; height: 32px; font-size: 1rem; padding-top: 3px; position: relative; }
             .rare { background: url("../../img/pictos/rewardBg_rare.gif") no-repeat; }
-
+            .not-persisted { outline: 1px solid red; }
+            .persisted { outline: 1px solid green; }
             .counter {
                 margin-top: -9.8px; position: absolute; bottom: 5px; left: 0; right: 0; font-size: 0; line-height: 0;
                 .count {
