--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -605,12 +605,18 @@
                                     <div class="ap small">{{ other_citizen.ap }}</div>
                                 </div>
                                 <div class="padded cell rw-3 right">
-                                    {% if other_citizen.escortSettings.allowInventoryAccess and allow_floor_access %}
+                                    {% if allow_floor_access %}
                                         {% for escort_action in escort_actions[other_citizen.id] %}
                                             {# @var \App\Structures\EscortItemActionSet escort_action #}
-                                            <button {% if not escort_action.hasAvailableActions %}disabled{% endif%} class="small inline" x-escort-meta-group x-escort-meta-action="{{ escort_action.group.id }}" x-citizen="{{ other_citizen.id }}" ><img alt="" src="{{ asset('build/images/actions/' ~ escort_action.group.icon ~ '.gif') }}" style="margin-right: 0;" />
-                                                {% if escort_action.group.tooltip is not null %}<div class="tooltip">{{ escort_action.group.tooltip|trans({'{citizen}': other_citizen.name},'items') }}</div>{% endif %}
-                                            </button>
+                                            {% if other_citizen.escortSettings.allowInventoryAccess %}
+                                                <button {% if not escort_action.hasAvailableActions %}disabled{% endif%} class="small inline" x-escort-meta-group="{{ other_citizen.escortSettings.allowInventoryAccess ? '1' : '0' }}" x-escort-meta-action="{{ escort_action.group.id }}" x-citizen="{{ other_citizen.id }}" ><img alt="" src="{{ asset('build/images/actions/' ~ escort_action.group.icon ~ '.gif') }}" style="margin-right: 0;" />
+                                                    {% if escort_action.group.tooltip is not null %}<div class="tooltip">{{ escort_action.group.tooltip|trans({'{citizen}': other_citizen.name},'items') }}</div>{% endif %}
+                                                </button>
+                                            {% elseif escort_action.hasAvailableActions %}
+                                                <button class="small inline" x-escort-meta-action="{{ escort_action.group.id }}" x-citizen="{{ other_citizen.id }}" x-provoking-id="p" x-action-id="p" x-action-confirm="1"><img alt="" src="{{ asset('build/images/actions/' ~ escort_action.group.icon ~ '.gif') }}" style="margin-right: 0;" />
+                                                    {% if escort_action.group.tooltip is not null %}<div class="tooltip">{{ escort_action.group.tooltip|trans({'{citizen}': other_citizen.name},'items') }}</div>{% endif %}
+                                                </button>
+                                            {% endif %}
                                         {% endfor %}
                                     {% endif %}
                                     {% if zone.x != 0 or zone.y != 0 %}
@@ -635,7 +641,7 @@
                                         <div class="tooltip">{{ '{citizen} sagen mir nicht mehr zu folgen.'|trans({'{citizen}': other_citizen.name},'game') }}</div>
                                     </button>
 
-                                    {% if escort_actions[other_citizen.id] is defined %}
+                                    {% if escort_actions[other_citizen.id] is defined and other_citizen.escortSettings.allowInventoryAccess %}
                                         {% for escort_action in escort_actions[other_citizen.id] %}
                                             {# @var \App\Structures\EscortItemActionSet escort_action #}
                                             <div class="tooltip-dummy hidden _ec _ec_{{ other_citizen.id }}_{{ escort_action.group.id }}">
@@ -1047,7 +1053,7 @@
         );
 
         handleActions(
-            document.querySelectorAll('._ec [x-action-id][x-provoking-id][x-citizen][x-escort-meta-action]:not([disabled])'),
+            document.querySelectorAll('._ec [x-action-id][x-provoking-id][x-citizen][x-escort-meta-action]:not([disabled]), [x-action-id="p"][x-provoking-id="p"][x-citizen][x-escort-meta-action]'),
             '{{ path('beyond_desert_escort_action_controller') }}', '{{ path('beyond_dashboard') }}', document.getElementById('beyond_desert_content')
         );
 
